force-app/main/default/objects/Work_Order_Contract__c/Work_Order_Contract__c.object-meta.xml
<CustomObject>
    <label>Work Order Contract</label>
    <nameField>
        <displayFormat>WC-{000000}</displayFormat>
        <label>Work Order Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>