force-app/main/default/objects/Work_Order_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Field_Service_Contract__c</referenceTo>
    <relationshipLabel>Work Order Contracts</relationshipLabel>
    <relationshipName>WorkOrderContracts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>