force-app/main/default/objects/Work_Order_Contract__c/fields/Contract_End__c.field-meta.xml
<CustomField>
    <fullName>Contract_End__c</fullName>
    <formula>Contract__r.EndDate__c</formula>
    <label>Contract End</label>
    <type>Date</type>
</CustomField>