force-app/main/default/objects/Work_Order_Contract__c/fields/Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start__c</fullName>
    <formula>Contract__r.StartDate__c</formula>
    <label>Contract Start</label>
    <type>Date</type>
</CustomField>