force-app/main/default/objects/Work_Order_Contract__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <formula>Contract__r.Contract_Type__c</formula>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>