force-app/main/default/objects/Work_Order_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>Contract__r.Status__c</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>